button back layout help and about

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
                 android:value="" />
         </activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".help"></activity>
+        <activity android:name=".about"></activity>
     </application>
 
 </manifest>
