--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logo_ppb2"
+        android:label="SecAlarm"
+        android:roundIcon="@drawable/logo_ppb2"
         android:supportsRtl="true"
         android:theme="@style/Theme.Uas_ppb2_agung"
         tools:targetApi="31">
